Funciona el botón de confirmar edición